Travel::Status::DE::DBRIS 0.14 - Fri Sep 19 2025

    * dbris-m: Do not break --(raw-)json if the requested stop name is not an
      exact match
    * Location: Set is_additional for additional stops based on text remarks

Travel::Status::DE::DBRIS 0.13 - Mon Aug 25 2025

    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
    * Formation::Carriage: Handle undefined start/end markers

Travel::Status::DE::DBRIS 0.12 - Sat Jul 05 2025

    * dbris-m: Fix --(raw-)json for carriage formation requests
    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
    * Formation::Group: Update carriage model list (patch by Lili Chelsea Urban)
    * Formation::Group: Correctly identify LINT 27 and RS 1 trains

Travel::Status::DE::DBRIS 0.11 - Tue May 06 2025

    * Journey: Fix type/train_no handling when they are not separated by
      whitespace (Patch by Cassidy Dingenskirchen)

Travel::Status::DE::DBRIS 0.10 - Sat Apr 19 2025

    * Journey: Add train_no, line_no accessors

Travel::Status::DE::DBRIS 0.09 - Sat Apr 05 2025

    * dbris-m: Handle departures with undefined destination
    * Location: Handle negative coordinate values

Travel::Status::DE::DBRIS 0.08 - Tue Mar 25 2025

    * Journey: Add id accessor
    * Journey: Retrieve train/line number from journey ID if it is not provided
      by the API

Travel::Status::DE::DBRIS 0.07 - Sun Mar 23 2025

    * New optional recommended module: GIS::Distance (for Journey->polyline)
    * Location: Extract lat/lon from location ID, if needed
    * Journey: Add polyline accessor; enhance it if GIS::Distance is available
    * Journey: Add type, number accessors
    * dbris-m: Add --with-polyline option

Travel::Status::DE::DBRIS 0.06 - Sat Mar 01 2025

    * DBRIS: Fix new_p constructor
    * JourneyAtStop->via: return list, not arrayref
    * dbris-m: support raw station IDs as input

Travel::Status::DE::DBRIS 0.05 - Mon Feb 03 2025
